--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cvm-ui-desktop-distrologo (0.02) jammy; urgency=low
+
+  * some updates
+
+ -- Podter  Mon, 02 Jan 2023 10:37:00 +0100
+
 cvm-ui-desktop-distrologo (0.0.1) jammy; urgency=low
 
   * First release
